# Crawl_crack

./: Dockerfile.crawler  README.md  docker-compose.yml  pyproject.toml
crawler/: crawl_get_info.py
dags/: crawl_character_dag.py
